; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23888-ir.c_filter_rx_s_min_width.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx23885/extr_cx23888-ir.c_filter_rx_s_min_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cx23885_dev = type { i32 }

@CX23888_IR_FILTR_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cx23885_dev*, i32)* @filter_rx_s_min_width to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filter_rx_s_min_width(%struct.cx23885_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.cx23885_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.cx23885_dev* %0, %struct.cx23885_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @ns_to_lpf_count(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.cx23885_dev*, %struct.cx23885_dev** %3, align 8
  %9 = load i32, i32* @CX23888_IR_FILTR_REG, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @cx23888_ir_write4(%struct.cx23885_dev* %8, i32 %9, i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @lpf_count_to_ns(i32 %12)
  ret i32 %13
}

declare dso_local i32 @ns_to_lpf_count(i32) #1

declare dso_local i32 @cx23888_ir_write4(%struct.cx23885_dev*, i32, i32) #1

declare dso_local i32 @lpf_count_to_ns(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
